--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "",
-    "start": "concurrently \"webpack --config webpack/webpack.config.js --env env=dev --watch\" \"electron .\"",
+    "start": "concurrently \"npx tailwindcss -i ./src/App.css -o ./src/dist/App.css --watch\" \"webpack --config webpack/webpack.config.js --env env=dev --watch\" \"electron .\"",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "launch": "electron ."
   },
@@ -20,14 +20,17 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "electron": "^28.2.2",
     "electron-reload": "^2.0.0-alpha.1",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.35",
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
@@ -37,14 +40,18 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.11",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/react-redux": "^7.1.33",
+    "electron-drag": "^2.0.0",
+    "jsmediatags": "^3.9.7",
+    "postcss-loader": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.2",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   }
