--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.18",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
